# v-19

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
cli/v19/: __init__.py  main.py
examples/: corporate_scan.py  triple_jump.py
internal/: __init__.py
internal/auth/: __init__.py  credentials.py
internal/telemetry/: __init__.py  timer.py
pkg/: __init__.py  licensing.py
pkg/engine/: __init__.py  bridges.py  scanner.py
pkg/providers/: __init__.py  aws.py  azure.py  gcp.py  kubernetes.py
pkg/quant/: __init__.py
scripts/: setup.sh
spec/: PROTOCOL.md  PROTOCOL_V19.md  TRIPLE_JUMP.md
tests/v19/: __init__.py  test_bridges.py  test_engine.py  test_providers.py
v19/: __init__.py
v19/engine/: __init__.py
v19/providers/: __init__.py
